[package]
name = "qni-connector-ws-rs"
description = "qni connector for websocket"
version = "0.2.2"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"

exclude = [
    ".gitignore",
    ".travis.yml",
]

[features]
default = []
ssl = ["ws/ssl", "openssl"]

[dependencies]
qni-core-rs = "0.2.2"
simple-error = "0.1.13"
ws = "0.7.9"
borrowed-thread = "0.1.3"

[dependencies.openssl]
version = "0.10"
optional = true
